// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing RequestForm component should render as expected 1`] = `
<form
  id="make-request-form"
  onSubmit={[Function]}
>
  <label
    htmlFor="title"
  >
     Request title
  </label>
  <input
    className="form-input"
    id="title"
    name="title"
    onChange={[Function]}
    placeholder="E.g. Broken side mirror"
    required={true}
    type="text"
    value="title"
  />
  <label
    htmlFor="description"
  >
    Request Description
  </label>
  <textarea
    className="form-input"
    id="description"
    name="description"
    onChange={[Function]}
    required={true}
    type="text"
    value="des"
  />
  <label
    htmlFor="type"
  >
    Request type
  </label>
  <span>
    <input
      checked={false}
      name="type"
      onChange={[Function]}
      type="radio"
      value="maintenance"
    />
      Maintenance
  </span>
     
  <span>
    <input
      checked={false}
      name="type"
      onChange={[Function]}
      type="radio"
      value="repair"
    />
      Repair
  </span>
  <hr />
  <input
    className="form-input btn btn-primary"
    id="submit-btn"
    type="submit"
    value="Make Request"
  />
</form>
`;

exports[`testing CreateRequestForm component should render as expected when success is true 1`] = `
<section
  className="min-height"
  id="make-request"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={
        Object {
          "message": "error",
        }
      }
    />
    <div
      className="make-edit-request"
    >
      <h2>
        Make a new request
      </h2>
      <hr />
      <RequestForm
        description="des"
        formType="create"
        handleChange={[Function]}
        handleSubmit={[Function]}
        title="title"
        type="type"
      />
    </div>
  </div>
  <Redirect
    push={false}
    to="/users/requests/all"
  />
</section>
`;

exports[`testing CreateRequestForm component should render as expected when there is an error 1`] = `
<section
  className="min-height"
  id="make-request"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={
        Object {
          "message": "error",
        }
      }
    />
    <div
      className="make-edit-request"
    >
      <h2>
        Make a new request
      </h2>
      <hr />
      <RequestForm
        description="des"
        formType="create"
        handleChange={[Function]}
        handleSubmit={[Function]}
        title="title"
        type="type"
      />
    </div>
  </div>
</section>
`;

exports[`testing CreateRequestForm component should render as expected when there is no error 1`] = `
<section
  className="min-height"
  id="make-request"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={Object {}}
    />
    <div
      className="make-edit-request"
    >
      <h2>
        Make a new request
      </h2>
      <hr />
      <RequestForm
        description="des"
        formType="create"
        handleChange={[Function]}
        handleSubmit={[Function]}
        title="title"
        type="type"
      />
    </div>
  </div>
</section>
`;

exports[`testing EditRequestForm component should render as expected when success is true 1`] = `
<section
  className="min-height"
  id="make-request"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={
        Object {
          "message": "error",
        }
      }
    />
    <div
      className="make-edit-request"
    >
      <h2>
        Make a new request
      </h2>
      <hr />
      <RequestForm
        description="des"
        formType="edit"
        handleChange={[Function]}
        handleSubmit={[Function]}
        title="title"
        type="type"
      />
    </div>
  </div>
  <Redirect
    push={false}
    to="/users/requests/all"
  />
</section>
`;

exports[`testing EditRequestForm component should render as expected when there is an error 1`] = `
<section
  className="min-height"
  id="make-request"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={
        Object {
          "message": "error",
        }
      }
    />
    <div
      className="make-edit-request"
    >
      <h2>
        Make a new request
      </h2>
      <hr />
      <RequestForm
        description="des"
        formType="edit"
        handleChange={[Function]}
        handleSubmit={[Function]}
        title="title"
        type="type"
      />
    </div>
  </div>
</section>
`;

exports[`testing EditRequestForm component should render as expected when there is no error 1`] = `
<section
  className="min-height"
  id="make-request"
>
  <Loading
    isLoading={false}
  />
  <div
    className="container"
  >
    <ErrorMessage
      errors={Object {}}
    />
    <div
      className="make-edit-request"
    >
      <h2>
        Make a new request
      </h2>
      <hr />
      <RequestForm
        description="des"
        formType="edit"
        handleChange={[Function]}
        handleSubmit={[Function]}
        title="title"
        type="type"
      />
    </div>
  </div>
</section>
`;
